examples/test/testpolicy14169.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14169
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key32: value24
      key18: value4
      key17: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value1
          key40: value35
          key45: value8
      podSelector:
        matchLabels:
          key31: value22
          key12: value19
